// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List /> should has className from className prop 1`] = `
<ul
  className="test-class-name"
>
  Test children
</ul>
`;

exports[`<List /> should renders correct <List /> 1`] = `
<ul>
  Test children
</ul>
`;
